--- a/asf_theme/assets/stylesheets/extra.css
+++ b/asf_theme/assets/stylesheets/extra.css
@@ -37,7 +37,7 @@ a {
 .md-footer-container {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  flex-w
   justify-content: space-evenly;
   margin-top: 20px;
 }
