--- a/asf_theme/partials/footer.html
+++ b/asf_theme/partials/footer.html
@@ -37,37 +37,39 @@
           </a>
         {% endif %}
       </nav>
-      <div class="md-footer-container">
-        <div class="md-footer-container-item">
-          <img src="/assets/images/asf-logo-blue-nav.png"
-               alt="ASF Logo"
-               class="md-footer-logo">
-        </div>
-        <div class="md-footer-container-item">
-          <h1>About Us</h1>
-          <p>
-            The Alaska Satellite Facility downlinks, processes, archives, and
-            distributes remote-sensing data to scientific users around the world.
-            ASF’s mission is to make remote-sensing data accessible.
-          </p>
-          <p>
-            <a href="https://asf.alaska.edu/about-asf/" target="_blank">
-              Read More
-            </a>
-          </p>
-        </div>
-        <div class="md-footer-container-item">
-          <h1>Contact Info</h1>
-          <p>
-            Alaska Satellite Facility<br>
-            2156 Koyukuk Drive<br>
-            Fairbanks, AK 99775<br>
-            (907) 474-5041<br>
-            uso@asf.alaska.edu<br>
-          </p>
-          <p>
-            <a href="javascript:feedback.showForm();">Send Us A Message</a>
-          </p>
+      <div class="md-grid">
+        <div class="md-footer-container md-grid">
+          <div class="md-footer-container-item">
+            <img src="/assets/images/asf-logo-blue-nav.png"
+                 alt="ASF Logo"
+                 class="md-footer-logo">
+          </div>
+          <div class="md-footer-container-item md-about-us">
+            <h1>About Us</h1>
+            <p>
+              The Alaska Satellite Facility downlinks, processes, archives, and
+              distributes remote-sensing data to scientific users around the world.
+              ASF’s mission is to make remote-sensing data accessible.
+            </p>
+            <p>
+              <a href="https://asf.alaska.edu/about-asf/" target="_blank">
+                Read More
+              </a>
+            </p>
+          </div>
+          <div class="md-footer-container-item md-contact-info">
+            <h1>Contact Info</h1>
+            <p>
+              Alaska Satellite Facility<br>
+              2156 Koyukuk Drive<br>
+              Fairbanks, AK 99775<br>
+              (907) 474-5041<br>
+              uso@asf.alaska.edu<br>
+            </p>
+            <p>
+              <a href="javascript:feedback.showForm();">Send Us A Message</a>
+            </p>
+          </div>
         </div>
       </div>
     </div>
