avoid implicit call to document.clear()
document.write() calls document.open() which has a chance (if the document is closed) to call document.clear() which will delete the entire page, this fixes it by dynamically adding content to a blank element without calling document.open()

--- a/asf_theme/partials/footer.html
+++ b/asf_theme/partials/footer.html
@@ -115,8 +115,10 @@
       <div class="md-footer-copyright">
         <div class="md-footer-copyright__highlight">
           {% if config.copyright or config.theme.copyright %}
-            &copy; <script type="text/javascript">
-                document.write(new Date().getFullYear());
+            &copy; <span id="date"><span>
+            <script type="text/javascript">
+                d = new Date().getFullYear();
+                document.getElementById(date).innerHTML=d;
             </script>
             {{ config.copyright if config.copyright else config.theme.copyright}}
           {% endif %}
