fix missing in footer

--- a/asf_theme/partials/footer.html
+++ b/asf_theme/partials/footer.html
@@ -115,7 +115,7 @@
       <div class="md-footer-copyright">
         <div class="md-footer-copyright__highlight">
           {% if config.copyright or config.theme.copyright %}
-            &copy; <span id="copyright-year"><span>
+            &copy; <span id="copyright-year"></span>
             <script type="text/javascript">
                 current_year = new Date().getFullYear();
                 document.getElementById("copyright-year").innerHTML=current_year;
