--- a/asf_theme/partials/header.html
+++ b/asf_theme/partials/header.html
@@ -40,8 +40,9 @@
     <a
       href="{{ config.theme.asf_logo_url }}"
       title="ASF"
-      class="md-header-nav__button md-logo"
+      class="md-header__button md-logo"
       aria-label="ASF"
+      data-md-component="logo"
     >
       <img src="{{ config.theme.asf_logo | url }}" alt="logo" />
     </a>
