--- a/asf_theme/assets/stylesheets/asf.css
+++ b/asf_theme/assets/stylesheets/asf.css
@@ -18,7 +18,7 @@ a {
 
 }
 
-.md-header-nav__button.md-logo img {
+.md-header__button.md-logo img {
   height: 2.0rem;
   width: auto;
   display: inline-block;
