Start updating the footer

--- a/asf_theme/assets/stylesheets/asf.css
+++ b/asf_theme/assets/stylesheets/asf.css
@@ -10,12 +10,20 @@ a {
   color: rgba(248, 248, 248, 100);
 }
 
-.md-header, .md-footer {
+.md-header {
   background: rgb(101, 102, 92);
   background: linear-gradient(180deg, rgba(101, 102, 92, 1) 0%, rgba(106, 106, 106, 1) 100%);
   box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.5);
   transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
 
+}
+
+.md-footer {
+  background: rgb(101, 102, 92, 1);
+  /* TODO: get linear gradient to display correctly */
+  /*background: linear-gradient(180deg, rgba(101, 102, 92, 1) 0%, rgba(106, 106, 106, 1) 100%);*/
+  box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.5);
+  transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
 }
 
 .md-header__button.md-logo img {
@@ -25,13 +33,19 @@ a {
   margin-top: -7px;
 }
 
-.md-footer-nav {
+.md-footer {
   background-image: url("../images/map.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
   min-height: 510px;
   border-top: 58px solid #ffcd00;
+}
+
+.md-footer-meta.md-typeset {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 .md-footer-container {
@@ -82,11 +96,11 @@ a {
   background-color: black;
 }
 
-.md-footer-copyright-link {
+.md-copyright-link {
   color: #1bb0ce !important;
 }
 
-.md-footer-copyright {
+.md-copyright {
   margin-left: 0;
 }
 
