fix footer size

--- a/asf_theme/assets/stylesheets/asf.css
+++ b/asf_theme/assets/stylesheets/asf.css
@@ -37,8 +37,8 @@ a {
   background-image: url("../images/map.png");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center center;
-  min-height: 510px;
+  background-position: center 128%;
+  min-height: 574px;
   border-top: 58px solid #ffcd00;
 }
 
