--- a/asf_theme/assets/stylesheets/asf.css
+++ b/asf_theme/assets/stylesheets/asf.css
@@ -10,9 +10,18 @@ a {
   color: rgba(248, 248, 248, 100);
 }
 
-.md-header, .md-footer {
+.md-header {
   background: rgb(101, 102, 92);
   background: linear-gradient(180deg, rgba(101, 102, 92, 1) 0%, rgba(106, 106, 106, 1) 100%);
+  box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.5);
+  transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
+
+}
+
+.md-footer {
+  background: rgb(101, 102, 92);
+  /* TODO: linear gradient doesn't display properly */
+  /*background: linear-gradient(180deg, rgba(101, 102, 92, 1) 0%, rgba(106, 106, 106, 1) 100%);*/
   box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.5);
   transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
 
