Cite upstream files

--- a/asf_theme/partials/copyright.html
+++ b/asf_theme/partials/copyright.html
@@ -20,6 +20,8 @@
   IN THE SOFTWARE.
 -->
 
+<!-- Adapted from https://github.com/squidfunk/mkdocs-material/blob/9.4.2/src/templates/partials/copyright.html -->
+
 <!-- Copyright and theme information -->
 <div class="md-copyright">
   <div class="md-copyright__highlight">
