--- a/asf_theme/partials/footer.html
+++ b/asf_theme/partials/footer.html
@@ -20,6 +20,8 @@
   IN THE SOFTWARE.
 -->
 
+<!-- Adapted from https://github.com/squidfunk/mkdocs-material/blob/9.4.2/src/templates/partials/footer.html -->
+
 <!-- Footer -->
 <footer class="md-footer">
 
