--- a/asf_theme/partials/header.html
+++ b/asf_theme/partials/header.html
@@ -20,6 +20,8 @@
   IN THE SOFTWARE.
 -->
 
+<!-- Adapted from https://github.com/squidfunk/mkdocs-material/blob/9.4.2/src/templates/partials/header.html -->
+
 <!-- Determine classes -->
 {% set class = "md-header" %}
 {% if "navigation.tabs.sticky" in features %}
