--- a/asf_theme/partials/social.html
+++ b/asf_theme/partials/social.html
@@ -20,6 +20,8 @@
   IN THE SOFTWARE.
 -->
 
+<!-- Adapted from https://github.com/squidfunk/mkdocs-material/blob/9.4.2/src/templates/partials/social.html -->
+
 <!-- Social links -->
 <div class="md-social">
   {% for social in config.theme.social + config.extra.social %}
