--- a/asf_theme/assets/stylesheets/asf.css
+++ b/asf_theme/assets/stylesheets/asf.css
@@ -99,19 +99,17 @@ a {
   margin-left: 0;
 }
 
+.md-nav__title {
+  color: black;
+}
+
 .md-nav--primary .md-nav__title {
+  background: #f8f8f8;
   box-shadow: none;
-  background: none;
 }
 
 .md-nav--secondary .md-nav__title {
-  box-shadow: none;
-  background: none;
-}
-
-
-.md-nav__title {
-  color: black;
+  background: #f8f8f8;
   box-shadow: none;
 }
 
